--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     </script>
 </head>
 <body>
-    <span class="loading"></span>
+    <span class="loading">Hallooooooo!</span>
 </body>
 </html>
