--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     </script>
 </head>
 <body>
-    <span class="loading">Hallooooooo!</span>
+    <div>Hallo</div>
+    <div>und</div>
+    <div>Ballo</div>
 </body>
 </html>
